--- a/src/widgets/footer/footer.module.scss
+++ b/src/widgets/footer/footer.module.scss
@@ -1,24 +1,22 @@
-@import 'mixins';
+@import 'mixins', 'functions';
 
 .container {
   display: flex;
   align-items: center;
   height: 100%;
-  padding: 0.625rem var(--space-2);
+  padding: 0.625rem space(2);
 }
 
 .links {
   display: flex;
   align-items: center;
-  gap: var(--space-2);
+  gap: space(2);
   height: 100%;
-  margin: 0 0 0 auto;
-  padding: 0;
+  margin-left: auto;
 
   li {
     @include russo-font();
 
-    list-style-type: none;
     color: #6e8291;
   }
 }
