--- a/src/shared/styles/4-vendor/_nprogress.scss
+++ b/src/shared/styles/4-vendor/_nprogress.scss
@@ -4,7 +4,7 @@
 }
 
 #nprogress .bar {
-  background: var(--color-accent);
+  background: var(--color-root-accent);
 
   position: fixed;
   z-index: 1031;
@@ -22,7 +22,8 @@
   right: 0;
   width: 100px;
   height: 100%;
-  box-shadow: 0 0 10px var(--color-accent), 0 0 5px var(--color-accent);
+  box-shadow: 0 0 10px var(--color-root-accent),
+    0 0 5px var(--color-root-accent);
   opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
@@ -45,8 +46,8 @@
   box-sizing: border-box;
 
   border: solid 2px transparent;
-  border-top-color: var(--color-accent);
-  border-left-color: var(--color-accent);
+  border-top-color: var(--color-root-accent);
+  border-left-color: var(--color-root-accent);
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
