--- a/src/shared/styles/4-vendor/_reset.scss
+++ b/src/shared/styles/4-vendor/_reset.scss
@@ -21,8 +21,8 @@ dd {
   margin: 0;
 }
 
-ul[role='list'],
-ol[role='list'] {
+ul,
+ol {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -68,8 +68,8 @@ button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  min-width: 24px;
-  min-height: 24px;
+  min-width: 40px;
+  min-height: 40px;
   outline: 0;
   border-width: 1px;
   border-style: solid;
