--- a/src/shared/styles/Home.module.scss
+++ b/src/shared/styles/Home.module.scss
@@ -1,4 +1,4 @@
-@import 'mixins';
+@import '3-helpers/mixins', '3-helpers/functions';
 
 .container {
   position: relative;
@@ -10,7 +10,7 @@
 }
 
 .separator {
-  @include russo-font();
+  @include russo-font(rem(12px));
 
   position: absolute;
   top: 50%;
@@ -18,8 +18,7 @@
   transform: translate(-50%, -50%);
   user-select: none;
   pointer-events: none;
-  font-size: 12px;
-  color: var(--color-accent);
+  color: var(--color-text-accent);
 }
 
 .area {
@@ -32,7 +31,7 @@
 
   &.left {
     justify-content: flex-end;
-    padding-right: var(--space-4);
+    padding-right: space(4);
 
     span {
       &::before {
@@ -65,7 +64,7 @@
 
   &.right {
     justify-content: flex-start;
-    padding-left: var(--space-4);
+    padding-left: space(4);
 
     span {
       &::before {
