--- a/src/shared/ui/screen-frame/screen-frame.module.scss
+++ b/src/shared/ui/screen-frame/screen-frame.module.scss
@@ -1,6 +1,10 @@
+@import 'functions';
+
 .container {
-  grid-template-columns: var(--space-5) 1fr var(--space-5);
-  grid-template-rows: var(--header-height) 1fr var(--space-5);
+  --color-border: #21282a;
+
+  grid-template-columns: space(5) 1fr space(5);
+  grid-template-rows: var(--header-height) 1fr space(5);
   grid-template-areas:
     'area-left area-top area-right'
     'area-left content area-right'
@@ -82,7 +86,7 @@
 }
 
 .rightArea {
-  width: var(--space-5);
+  width: space(5);
   height: calc(100% - var(--header-height));
   grid-area: area-right;
   align-self: end;
@@ -91,14 +95,14 @@
 
 .bottomArea {
   width: 100%;
-  height: var(--space-5);
+  height: space(5);
   grid-area: area-bottom;
   border-right: 1px solid var(--color-border);
 }
 
 .leftArea {
-  width: var(--space-5);
-  height: calc(100% - var(--space-5));
+  width: space(5);
+  height: calc(100% - #{space(5)});
   grid-area: area-left;
   border-bottom: 1px solid var(--color-border);
 }
