--- a/src/widgets/header/header.module.scss
+++ b/src/widgets/header/header.module.scss
@@ -1,22 +1,17 @@
-@import 'mixins';
-@import 'animations';
+@import 'mixins', 'animations', 'functions';
 
 .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: var(--header-height);
-  padding: var(--space-3) var(--space-4);
-}
-
-.logo {
-  @include russo-font();
+  padding: space(3) space(4);
 }
 
 .like {
   @include grow(1.5);
 
-  padding: var(--space-1);
+  padding: space(1);
   border: 0;
   background-color: transparent;
 }
