--- a/src/shared/ui/navigation/navigation.module.scss
+++ b/src/shared/ui/navigation/navigation.module.scss
@@ -3,8 +3,13 @@
 .container {
   display: flex;
   align-items: center;
+  justify-content: center;
 
   &.small {
+    .list {
+      min-height: space(2.5);
+    }
+
     .item {
       font-size: 0.875rem;
     }
