--- a/src/widgets/header/header.module.scss
+++ b/src/widgets/header/header.module.scss
@@ -14,10 +14,13 @@
   transform: translateX(-50%);
 }
 
-.like {
-  @include grow(1.5);
+.actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: space(0.5);
 
-  padding: space(1);
-  border: 0;
-  background-color: transparent;
+  &__like {
+    @include grow(1.5);
+  }
 }
