refactor: changes styles styleguide
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/src/shared/styles/0-base/_global.scss
+++ b/src/shared/styles/0-base/_global.scss
@@ -9,7 +9,8 @@ LAYOUT AND COMMON STYLES
 
 html {
   min-width: 320px;
-  font-family: 'Russo One', 'Roboto', sans-serif;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
   background-color: var(--color-root-base);
 }
