--- a/src/widgets/footer/footer.module.scss
+++ b/src/widgets/footer/footer.module.scss
@@ -15,8 +15,8 @@
   margin-left: auto;
 
   li {
-    @include russo-font();
+    @include heading-font();
 
-    color: #6e8291;
+    color: var(--color-text-quaternary);
   }
 }
