--- a/src/shared/styles/3-helpers/_mixins.scss
+++ b/src/shared/styles/3-helpers/_mixins.scss
@@ -23,10 +23,22 @@ MIXINS
   -webkit-tap-highlight-color: transparent;
 }
 
-@mixin russo-font($fontSize: 1rem, $lineHeight: 1.25) {
+@mixin heading-font($fontSize: 1rem, $lineHeight: 1.25) {
   font-family: 'Russo One', sans-serif;
   font-size: $fontSize;
   line-height: $lineHeight;
+}
+
+@mixin text-font($fontSize: 1rem, $fontWeight: 400, $lineHeight: 1.25) {
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: $fontSize;
+  font-weight: $fontWeight;
+  line-height: $lineHeight;
+}
+
+@mixin letter-spacing() {
+  letter-spacing: 0.03em;
 }
 
 @mixin animation(
