--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -3,7 +3,7 @@
 .container {
   @include button-reset();
   @include animation();
-  @include russo-font();
+  @include heading-font(1rem);
 
   $root: container;
 
@@ -11,7 +11,6 @@
   min-height: space(5);
   padding: space(1) space(1.5);
   border: 0;
-  font-size: 1rem;
   color: var(--color-text-base);
 
   &:hover {
