--- a/src/shared/ui/screen-frame/screen-frame.module.scss
+++ b/src/shared/ui/screen-frame/screen-frame.module.scss
@@ -1,8 +1,6 @@
 @import 'functions';
 
 .container {
-  --color-border: #21282a;
-
   grid-template-columns: space(5) 1fr space(5);
   grid-template-rows: var(--header-height) 1fr space(5);
   grid-template-areas:
@@ -22,7 +20,7 @@
     justify-content: center;
     grid-area: content;
     width: 100%;
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--color-line-base);
 
     > main {
       width: 100%;
@@ -82,7 +80,7 @@
   width: 100%;
   height: var(--header-height);
   grid-area: area-top;
-  border-left: 1px solid var(--color-border);
+  border-left: 1px solid var(--color-line-base);
 }
 
 .rightArea {
@@ -90,19 +88,19 @@
   height: calc(100% - var(--header-height));
   grid-area: area-right;
   align-self: end;
-  border-top: 1px solid var(--color-border);
+  border-top: 1px solid var(--color-line-base);
 }
 
 .bottomArea {
   width: 100%;
   height: space(5);
   grid-area: area-bottom;
-  border-right: 1px solid var(--color-border);
+  border-right: 1px solid var(--color-line-base);
 }
 
 .leftArea {
   width: space(5);
   height: calc(100% - #{space(5)});
   grid-area: area-left;
-  border-bottom: 1px solid var(--color-border);
+  border-bottom: 1px solid var(--color-line-base);
 }
