fix: link params and styles
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/src/widgets/footer/footer.module.scss
+++ b/src/widgets/footer/footer.module.scss
@@ -15,8 +15,9 @@
   margin-left: auto;
 
   li {
-    @include heading-font();
-
-    color: var(--color-text-quaternary);
+    :global a {
+      @include heading-font();
+      color: var(--color-text-quaternary);
+    }
   }
 }
