--- a/src/shared/styles/0-base/_global.scss
+++ b/src/shared/styles/0-base/_global.scss
@@ -9,7 +9,7 @@ LAYOUT AND COMMON STYLES
 
 html {
   min-width: 320px;
-  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen,
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow-x: hidden;
   background-color: var(--color-root-base);
