--- a/src/shared/styles/3-helpers/_variables.scss
+++ b/src/shared/styles/3-helpers/_variables.scss
@@ -6,7 +6,7 @@
 
   --color-root-accent: #46d0fb;
   --color-root-base: #0b0b0b;
-  --color-root-tertiary: #121212;
+  --color-root-faint: #121212;
 
   --color-text-accent: #46d0fb;
   --color-text-base: #f9f9f9;
