--- a/src/shared/layouts/atmosphere-layout/atmosphere-layout.module.scss
+++ b/src/shared/layouts/atmosphere-layout/atmosphere-layout.module.scss
@@ -11,7 +11,11 @@
   grid-template-rows: max-content;
 
   &__nav {
+    position: sticky;
+    top: 0;
+    z-index: 1;
     padding-top: space(2.5);
     padding-bottom: space(2.5);
+    background-color: var(--color-root-base);
   }
 }
