--- a/src/shared/layouts/reader-layout/reader-layout.module.scss
+++ b/src/shared/layouts/reader-layout/reader-layout.module.scss
@@ -16,5 +16,5 @@
 .content {
   position: relative;
   grid-area: content;
-  background-color: var(--color-root-tertiary);
+  background-color: var(--color-root-faint);
 }
