refactor(styles): adds variables for navigation height
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/src/shared/layouts/atmosphere-with-sidebar-layout/atmosphere-with-sidebar-layout.module.scss
+++ b/src/shared/layouts/atmosphere-with-sidebar-layout/atmosphere-with-sidebar-layout.module.scss
@@ -15,7 +15,7 @@
   background-color: var(--color-root-faint);
 
   &__wrapper {
-    top: 60px;
+    top: var(--navigation-small-height);
     padding: 0;
   }
 }
