--- a/src/shared/styles/3-helpers/_variables.scss
+++ b/src/shared/styles/3-helpers/_variables.scss
@@ -1,3 +1,5 @@
+@import 'functions';
+
 :root {
   --color-white: #ffffff;
   --color-black: #000000;
@@ -20,7 +22,10 @@
 
   --color-line-base: #21282a;
 
-  --header-height: 5rem;
+  --header-height: #{rem(80px)};
 
   --sidebar-width: minmax(20rem, 1fr);
+
+  --navigation-medium-height: #{rem(80px)};
+  --navigation-small-height: #{rem(60px)};
 }
