refactor: global refactoring
Signed-off-by: Aleksey Shelementev <rushelex@gmail.com>

--- a/src/shared/styles/base/variables.scss
+++ b/src/shared/styles/base/variables.scss
@@ -21,7 +21,7 @@
 
   --header-height: 5rem; // 80px
 
-  --sidebar-width: minmax(20rem, 1fr);
+  --sidebar-width: minmax(20rem, 25rem);
 
   --navigation-medium-height: 5rem; // 80px
   --navigation-small-height: 3.75rem; // 60px
